--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Mean Square Senpai
 
 # Short bio or description (displayed in the header)
-description: Statistics/Data Science, Six Sigma/Lean, and Strategy
+description: Statistics/Data Science, Teaching, Six Sigma/Lean, and Strategy
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/BrianC1992/BrianC1992.github.io/master/images/Brian.jpg
